解决生成表达式中会出现没有必要的数字的问题及改进了计算的方法

--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "jinjin99 and kaolalalala",
+  "author": "",
   "license": "ISC"
 }
